# snyk-poetry-lockfile-parser

./: .eslintrc.json  .gitignore  .prettierignore  .snyk  README.md  catalog-info.yaml  jest.config.js  package.json  tsconfig.json
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
lib/: index.ts  lock-file-parser.ts  manifest-parser.bak.ts  manifest-parser.ts  poetry-dep-graph-builder.ts  utils.ts
lib/parsers/: types.ts  v1Parser.ts  v2Parser.ts
lib/types/: poetry-lock-file-type.ts  poetry-manifest-type.ts
test/: .eslintrc.json  index.test.ts  poetry-v1.test.ts  poetry-v2.test.ts  utils.ts
test/fixtures/: index.test.ts  utils.ts
test/fixtures/scenarios/circular-dependency/: pyproject.toml
test/fixtures/scenarios/conflicting-python-declarations/: pyproject.toml
test/fixtures/scenarios/dep-with-underscore/: pyproject.toml
test/fixtures/scenarios/one-dep-no-transitives/: pyproject.toml
test/fixtures/scenarios/one-dep-one-devdep/: pyproject.toml  requirements.txt
test/fixtures/scenarios/one-dep-one-devdep-group/: pyproject.toml
test/fixtures/scenarios/one-dep-one-devdep-multiple-devdep-groups/: pyproject.toml
test/fixtures/scenarios/one-dep-with-transitive/: pyproject.toml
test/fixtures/scenarios/package-mode-false/: pyproject.toml
test/fixtures/scenarios/unsafe-packages/: pyproject.toml
test/fixtures/v1/: index.test.ts
test/fixtures/v1/scenarios/one-dep-one-devdep-one-devdep-group/: pyproject.toml
test/fixtures/v1/scenarios/package-mode-false/: expected.json  pyproject.toml
test/fixtures/v2/: index.test.ts
test/fixtures/v2/scenarios/circular-dependency/: pyproject.toml
test/fixtures/v2/scenarios/dep-with-optional-dependency/: pyproject.toml
test/fixtures/v2/scenarios/dev-deps-only/: pyproject.toml
test/fixtures/v2/scenarios/group-extras-no-dev/: pyproject.toml
test/fixtures/v2/scenarios/one-dep-no-transitives/: pyproject.toml
test/fixtures/v2/scenarios/one-dep-one-devdep/: pyproject.toml
test/fixtures/v2/scenarios/one-dep-one-devdep-multiple-devdep-groups/: pyproject.toml
test/fixtures/v2/scenarios/one-dep-with-transitive/: pyproject.toml
test/fixtures/v2/scenarios/unsafe-packages/: pyproject.toml
test/lib/: index.test.ts
test/lib/__snapshots__/: index.test.ts.snap
test/lib/fixtures/empty/: pyproject.toml
test/lib/fixtures/official/: README.md  pyproject.toml
test/lib/fixtures/one-dependency/: pyproject.toml
test/unit/lib/: index.test.ts  lock-file-parser.test.ts  manifest-parser.test.ts  poetry-dep-graph-builder.test.ts
