[tool.poetry]
name = "conflicting-python-declarations"
version = "0.1.0"
description = ""
authors = ["Daniel Trunley <daniel.trunley@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.8"
typing = { version = "*", python = "<3.4" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
