[tool.poetry]
name = "empty"
version = "0.1.0"
description = ""
authors = ["Admon Sasson <admon.sasson@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"empty" = 'main:main'
