[tool.poetry]
name = "one-dependency"
version = "0.1.0"
description = ""
authors = ["Admon Sasson <admon.sasson@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.8"
hello-world = "0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
