[project]
name = "myPkg"
version = "1.42.2"
description = ""
authors = [
    {name = "Damilola Olufemi",email = "dami.olufemi@snyk.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask (>=2020.12.0)",
    "distributed (>=2020.12.0)"
]
[build-system]
requires = ["poetry-core>=3.6"]
build-backend = "poetry.core.masonry.api"
