[project]
name = "dep-with-optional-dependency"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask[async] (>=2.0)",
]

[build-system]
requires = ["poetry-core>=3.6"]
build-backend = "poetry.core.masonry.api"
